@@ -11,6 +11,8 @@ Revision history for Perl module Math::Prime::Util
 
     - Monolithic sieves beyond 30*2^32 (~ 1.2 * 10^11) overflowed.
 
+    - is_semiprime was wrong for 5 small values since 0.69.  Fixed.
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - is_primitive_root much faster (doesn't need to calulate totient,
